fix combobox visibility

--- a/templates/accqstStyles.css
+++ b/templates/accqstStyles.css
@@ -1,3 +1,8 @@
+/* Needed to make combo boxes visible */
+#tst_output {
+    overflow: visible;
+}
+
 table.accqstBookingTable {
 	width: 100%;
 	border-collapse: separate;
